[gd_scene format=3 uid="uid://emr2lpcnu5w7"]

[ext_resource type="Texture2D" uid="uid://dlhj0vslk1e0c" path="res://images/map 01.png" id="1_6js43"]
[ext_resource type="Script" uid="uid://deeay6fdmmjmn" path="res://scene + script/people search boxes/v2 maps/maps_v2.gd" id="1_vvcnr"]

[node name="map01 V2" type="Area2D" unique_id=448452585 groups=["correct area"]]
collision_layer = 4096
collision_mask = 4096
script = ExtResource("1_vvcnr")

[node name="map01 VER2" type="Sprite2D" parent="." unique_id=1120422714]
scale = Vector2(1.4681818, 1.4681818)
texture = ExtResource("1_6js43")
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." unique_id=425477738]
scale = Vector2(1.4681818, 1.4681818)
polygon = PackedVector2Array(15, 10, 3, 10, 3, 12.2, 0, 15.2, 0, 30, 51, 120.4, 51, 122.8, 78, 152.7, 78, 154.2, 89, 160.2, 89, 161.7, 100, 163.7, 100, 165.4, 112.4, 163, 115.5, 163, 134.5, 152, 136.6, 152, 220, 97.1, 220, 96.2, 256, 78.2, 256, 77.4, 297, 64.5, 297, 63.7, 323, 59.7, 323, 58.9, 423, 57, 423, 56.1, 464.9, 59, 473.6, 59, 540.8, 73, 544.6, 73, 569.6, 83, 573.5, 83, 603.5, 98, 604.8, 98, 612, 112.5, 612, 124.3, 607, 132.4, 607, 135, 595, 144, 556, 158.6, 556, 159.3, 471.6, 177, 466.6, 177, 442.6, 186, 439.4, 186, 413.4, 203, 411.1, 203, 389.1, 229, 387.8, 229, 375.8, 253, 374.5, 253, 365, 282.7, 365, 295.3, 371, 314.2, 371, 316.9, 404.2, 346, 404.8, 346, 410.8, 358, 413, 368.3, 413, 379.7, 400.7, 385, 397.8, 385, 393.9, 392, 392.8, 392, 391.7, 394.2, 399, 403.6, 399, 406, 409.5, 406, 419.5, 401, 422.8, 401, 432.7, 392, 435, 392, 435, 354.5, 429, 343.3, 429, 340.2, 394.8, 307, 393.2, 307, 390.2, 301, 389, 292.8, 389, 285.4, 393, 274.4, 393, 270.5, 399, 258.5, 399, 254.5, 410, 238.6, 410, 236.8, 430, 217.9, 430, 217.2, 454, 205.2, 454, 204.6, 554.4, 182, 559.3, 182, 588.4, 172, 591.6, 172, 601.5, 166, 603.8, 166, 612.7, 158, 614.9, 158, 628.9, 141, 630.7, 141, 633.8, 120, 635.4, 117.5, 634, 116.1, 634, 103.5, 626, 88.4, 626, 85.8, 598, 69.8, 598, 68.6, 552, 52.5, 552, 51.4, 529, 46.3, 529, 45.3, 456.2, 34, 343.9, 34, 302.7, 40, 296.6, 40, 249.6, 57, 246.5, 57, 203.5, 82, 200.4, 82, 131, 128.9, 131, 129.7, 104.5, 142.9, 91.6, 135, 89.9, 135, 76.9, 120, 76.1, 120, 21, 20.5, 21, 17.1, 15, 12)

[node name="ColorRect" type="ColorRect" parent="." unique_id=1403483236]
offset_right = 118.0
offset_bottom = 62.0

[node name="ColorRect2" type="ColorRect" parent="." unique_id=235914407]
offset_left = 486.0
offset_top = 557.0
offset_right = 604.0
offset_bottom = 619.0

[node name="start" type="Button" parent="." unique_id=775570600]
offset_right = 117.0
offset_bottom = 62.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
button_mask = 0
text = "start"
flat = true

[node name="end" type="Button" parent="." unique_id=1645291097]
offset_left = 487.0
offset_top = 557.0
offset_right = 604.0
offset_bottom = 620.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
button_mask = 0
text = "end"
flat = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="start" to="." method="_on_start_mouse_exited"]
[connection signal="mouse_entered" from="end" to="." method="_on_end_mouse_entered"]
[connection signal="mouse_exited" from="end" to="." method="_on_end_mouse_exited"]
